# movingHeatSDC

./: .gitignore  README.md  docu.tex  moving_mesh_test.py  msdc_heat.tex  refs.bib
movingHeat/: eigenvalues1D.m  eigenvalues1D.py  heateq_moving2.py  heateq_moving3.py  moving_mesh_test.py  moving_mesh_test_short.py  plot_model1d_sol.py  plot_model_sol.py  testMoving3.py
movingHeat/data_video/: tFast.pvd  tFast_0.vtu  tFast_1.vtu  tFast_10.vtu  tFast_11.vtu  tFast_12.vtu  tFast_13.vtu  tFast_14.vtu  tFast_15.vtu  tFast_16.vtu  tFast_17.vtu  tFast_18.vtu  tFast_19.vtu  tFast_2.vtu  tFast_20.vtu  tFast_21.vtu  tFast_22.vtu  tFast_23.vtu  tFast_24.vtu  tFast_25.vtu  tFast_26.vtu  tFast_27.vtu  tFast_28.vtu  tFast_29.vtu  tFast_3.vtu  tFast_30.vtu  tFast_31.vtu  tFast_32.vtu  tFast_33.vtu  tFast_34.vtu  tFast_35.vtu  tFast_36.vtu  tFast_37.vtu  tFast_38.vtu  tFast_39.vtu  tFast_4.vtu  tFast_5.vtu  tFast_6.vtu  tFast_7.vtu  tFast_8.vtu  (+43 more)
movingHeat/movingHeat/: CMakeLists.txt  Makefile.am  cmpAccuracy_sdc_ros2.plt  cmpAccuracy_sdc_ros2.py  cmpAccuracy_sdc_ros2_alpha_1e-3.plt  config.h.cmake  configure.ac  dune.module  movingHeat.pc.in
movingHeat/movingHeat/src/: CMakeLists.txt  CoarseLapl.cc  CoarseLapl.h  CoarseLapl.hh  ColMat.h  Heat.cc  Heat.h  HeatCoupled.cc  HeatCoupled.h  MRSdc.h  Makefile.am  Model.h  MultirateCollocation.hh  RKC.h  Ros2.h  Sdc.h  Timer.h  accuracy_model.cc  getEigenvalues.cc  getJacobian.cc  heatCoupled_ros2.cc  heatCoupled_sdc.cc  heatCoupled_sdc_sdc_standard.cc  heatCoupled_sdc_standard.cc  heat_imexEuler.cc  heat_pfasst_ros2.cc  heat_rkc.cc  heat_ros2.cc  heat_sdc.cc  heat_sdc_sdc_standard.cc  heat_sdc_standard.cc  printSrcPoint.cc  stability_ros2.cc  stability_sdc.cc  stability_sdc_standard.cc  test_coarse_lapl.cc  test_grid_level.cc  test_lapl0.cc  test_levels.cc  test_mrsdc_lapl0.cc
movingHeat/movingHeat/src/test_mrsdc_lapl0/: refSol.h  sol_heat_sdc_M-3_P-8_nStep-10-00001.csv
multirateSdc/: CollocationClasses.py  MultirateCollocation.py  T_noSrc_imex_1000_fixed_1000.vtu  convergence_err.txt  convergence_err_ros2.txt  convergence_err_std.txt  convergence_nsteps.txt  diff.py  drake.tex  firedrake_problem.py  generate_weights.py  myf_0.vtu  plot_accuracy.py  plot_convergence.py  plot_convergence_model.py  plot_convergence_model_data.py  plot_model_1d.py  plot_model_2d.py  plot_model_2d_lapl0.py  plot_model_3d.py  plot_stability.py  plot_stability_model.py  plot_stability_model_1d.py  plot_stability_model_P.py  problem.py  problem_firedrake.py  problem_full.py  problem_inh.py  problem_inh_const.py  problem_model.py  problem_model_1d.py  problem_tcoeff.py  ros2.py  run.py  runAndreas.py  runIMEXEulerDrake.py  runImplEulerDrake.py  runRos2Drake.py  runsdc.py  runsdc_drake.py  (+18 more)
multirateSdc/M_3_P_2/: .cmpSrc.sh.swp  T_noSrc_sdc_K_2_1_fixed_1.vtu  T_noSrc_sdc_K_2_2_fixed_2.vtu  T_noSrc_sdc_K_2_4_fixed_4.vtu  T_noSrc_sdc_K_2_8_fixed_8.vtu  T_noSrc_sdc_K_32_4_fixed_4.vtu  T_noSrc_sdc_K_32_8_fixed_8.vtu  T_noSrc_sdc_K_3_1_fixed_1.vtu  T_noSrc_sdc_K_3_2_fixed_2.vtu  T_noSrc_sdc_K_3_4_fixed_4.vtu  T_noSrc_sdc_K_3_8_fixed_8.vtu  T_noSrc_sdc_K_4_1_fixed_1.vtu  T_noSrc_sdc_K_4_2_fixed_2.vtu  T_noSrc_sdc_K_4_4_fixed_4.vtu  T_noSrc_sdc_K_4_8_fixed_8.vtu  T_noSrc_sdc_K_8_1_fixed_1.vtu  T_noSrc_sdc_K_8_2_fixed_2.vtu  T_noSrc_sdc_K_8_4_fixed_4.vtu  T_noSrc_sdc_K_8_8_fixed_8.vtu  T_sdc_K_2_16_fixed_16.vtu  T_sdc_K_2_2_fixed_2.vtu  T_sdc_K_2_4_fixed_4.vtu  T_sdc_K_2_8_fixed_8.vtu  T_sdc_K_3_16_fixed_16.vtu  T_sdc_K_3_2_fixed_2.vtu  T_sdc_K_3_4_fixed_4.vtu  T_sdc_K_3_8_fixed_8.vtu  T_sdc_K_4_16_fixed_16.vtu  T_sdc_K_4_2_fixed_2.vtu  T_sdc_K_4_4_fixed_4.vtu  T_sdc_K_4_64_fixed_64.vtu  T_sdc_K_4_8_fixed_8.vtu  T_sdc_K_8_16_fixed_16.vtu  T_sdc_K_8_2_fixed_2.vtu  T_sdc_K_8_4_fixed_4.vtu  T_sdc_K_8_64_fixed_64.vtu  T_sdc_K_8_8_fixed_8.vtu  cmpNoSrc.sh  cmpSrc.sh  order.py
multirateSdc/M_3_P_2_testMove/: order.py
multirateSdc/M_3_P_2_testMove_rect/: diff.py  order.py
multirateSdc/M_3_P_2_testMove_tri/: T_ros2_100_fixed_1.vtu  T_ros2_1600_fixed_1.vtu  T_ros2_200_fixed_1.vtu  T_ros2_25_fixed_1.vtu  T_ros2_3200_fixed_1.vtu  T_ros2_400_fixed_1.vtu  T_ros2_50_fixed_1.vtu  T_ros2_800_fixed_1.vtu  order.py
multirateSdc/c++/: CMakeLists.txt
multirateSdc/c++/src/: ColMat.h  MRSdc.h  Model.h  MultirateCollocation.hh  Sdc.h  cmp_sdc_inhom.cc  linspace.h  runsdc.cc  runsdc_inhom.cc  runsdc_inhom_mass.cc  runsdc_model.cc  runsdc_standard.cc  stability_model_sdc.cc  stability_model_sdc_standard.cc  testCollocation.cc  test_mrsdc_g0.cc  test_sdc_model.cc
multirateSdc/longtime_M_3_P_2/: .directory  T_imex_1000_fixed_1000.vtu  T_imex_2000_fixed_2000.vtu  T_noSrc_imex_20000_fixed_20000.vtu  T_noSrc_imex_2000_fixed_0.vtu  T_noSrc_imex_2000_fixed_2000.vtu  T_noSrc_imex_4000_fixed_4000.vtu  T_noSrc_sdc_K_2_2_fixed_2.vtu  T_noSrc_sdc_K_2_4_fixed_4.vtu  T_noSrc_sdc_K_2_8_fixed_8.vtu  T_noSrc_sdc_K_3_4_fixed_4.vtu  T_noSrc_sdc_K_4_2_fixed_2.vtu  T_noSrc_sdc_K_4_4_fixed_4.vtu  T_noSrc_sdc_K_4_8_fixed_8.vtu  T_sdc_K_2_2_fixed_2.vtu  T_sdc_K_2_8_fixed_8.vtu  T_sdc_K_3_16_fixed_16.vtu  T_sdc_K_4_16_fixed_16.vtu  T_sdc_K_4_2_fixed_2.vtu  T_sdc_K_4_4_fixed_4.vtu  T_sdc_K_4_64_fixed_64.vtu  T_sdc_K_8_16_fixed_16.vtu  T_sdc_K_8_2_fixed_2.vtu  cmpNoSrc.sh  (+6 more)
(+446 files in other folders)
