project(mrsdc)
cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 11)

add_executable(runsdc src/runsdc.cc)
add_executable(runsdc_inhom src/runsdc_inhom.cc)
add_executable(runsdc_inhom_mass src/runsdc_inhom_mass.cc)
add_executable(testCollocation src/testCollocation.cc)
add_executable(cmp_sdc_inhom src/cmp_sdc_inhom.cc)

enable_testing()
add_test(cmp_sdc_inhom cmp_sdc_inhom)
add_test(runsdc_inhom runsdc_inhom)
add_test(runsdc_inhom_mass runsdc_inhom_mass)
add_test(runsdc runsdc)
