add_library(heat Heat.cc HeatCoupled.cc)

add_executable(heat_imexEuler heat_imexEuler.cc)
target_link_libraries(heat_imexEuler heat)
add_executable(heat_ros2 heat_ros2.cc)
target_link_libraries(heat_ros2 heat)
add_executable(heat_sdc heat_sdc.cc)
target_link_libraries(heat_sdc heat)
add_executable(heat_sdc_standard heat_sdc_standard.cc)
target_link_libraries(heat_sdc_standard heat)
add_executable(printSrcPoint printSrcPoint.cc)
target_link_libraries(printSrcPoint heat)
add_executable(getEigenvalues getEigenvalues.cc)
target_link_libraries(getEigenvalues heat)
add_executable(stability_ros2 stability_ros2.cc)
target_link_libraries(stability_ros2 heat)
add_executable(stability_sdc stability_sdc.cc)
target_link_libraries(stability_sdc heat)
add_executable(stability_sdc_standard stability_sdc_standard.cc)
target_link_libraries(stability_sdc_standard heat)
add_executable(getJacobian getJacobian.cc)
target_link_libraries(getJacobian heat)
add_executable(heat_sdc_sdc_standard heat_sdc_sdc_standard.cc)
target_link_libraries(heat_sdc_sdc_standard heat)
add_executable(test_lapl0 test_lapl0.cc)
target_link_libraries(test_lapl0 heat)
add_executable(test_mrsdc_lapl0 test_mrsdc_lapl0.cc)
target_link_libraries(test_mrsdc_lapl0 heat)

add_executable(test_grid_level test_grid_level.cc)
add_executable(test_coarse_lapl test_coarse_lapl.cc CoarseLapl.cc)
target_link_libraries(test_coarse_lapl heat)
add_executable(test_levels test_levels.cc)
target_link_libraries(test_levels heat)
target_link_dune_default_libraries("test_grid_level")
target_link_dune_default_libraries("test_coarse_lapl")

#add_executable(stability_model_sdc stability_model_sdc.cc)
add_executable(heatCoupled_ros2 heatCoupled_ros2.cc)
target_link_libraries(heatCoupled_ros2 heat)

add_executable(heatCoupled_sdc heatCoupled_sdc.cc)
target_link_libraries(heatCoupled_sdc heat)

add_executable(heatCoupled_sdc_standard heatCoupled_sdc_standard.cc)
target_link_libraries(heatCoupled_sdc_standard heat)

add_executable(heatCoupled_sdc_sdc_standard heatCoupled_sdc_sdc_standard.cc)
target_link_libraries(heatCoupled_sdc_sdc_standard heat)
target_link_dune_default_libraries("heat_imexEuler")
target_link_dune_default_libraries("heat_ros2")
